<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RequestAllFileActivity"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/request_allfile_welcome_to"
            android:text="@string/request_allfile_welcome_to"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="#040516"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/tvTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="PPT READER"
            android:text="PPT READER"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/primaryColor"
            android:textSize="32sp"
            android:layout_marginTop="4dp"
            />
        <ImageView
            android:layout_width="226dp"
            android:layout_height="214dp"
            android:src="@drawable/request_all_files_bg"
            android:layout_gravity="center"
            android:layout_marginTop="26dp"/>
        <TextView
            android:id="@+id/tvDesc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/request_allfile_permission_required"
            android:text="@string/request_allfile_permission_required"
            android:textStyle="bold"
            android:textColor="#040516"
            android:textSize="20sp"
            android:layout_marginTop="35dp"
            />
        <TextView
            android:id="@+id/tvDesc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/request_allfile_desc"
            android:text="@string/request_allfile_desc"
            android:textColor="#040516"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            />
        <TextView
            android:id="@+id/btnAllow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/feedback_activity_bg_button_send"
            android:gravity="center"
            android:paddingVertical="12dp"
            android:text="@string/common_allow"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="@string/common_allow" />
        <TextView
            android:id="@+id/btnLater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:layout_gravity="center"
            android:paddingVertical="2dp"
            android:text="@string/common_later"
            android:textColor="#8C8DAF"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="@string/common_later" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>